--- a/static/index.html
+++ b/static/index.html
@@ -9,12 +9,11 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-        <title>Szerver oldali JavaScript (BME)</title>
+        <title>Sign In</title>
     </head>
     <body>
         <div class="container">
-            <h1>Greek Apartment Booker</h1>
-            <h2>Sign In</h2>
+            <h1>Sign In</h1>
             <form>
                 <div class="form-group">
                     <label for="username">Username</label>
@@ -24,7 +23,7 @@
                     <label for="password">Password</label>
                     <input type="password" class="form-control" id="password" placeholder="Password" value="admin">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <a class="btn btn-primary" href="news.html" role="button">Submit</a>
               </form>
         </div>
 
