All Reservations page added

--- a/static/reservations_all.html
+++ b/static/reservations_all.html
@@ -27,13 +27,13 @@
                 <li class="nav-item">
                   <a class="nav-link" href="news.html">News<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="gallery.html">Gallery</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item active dropdown">
                   <a class="nav-link dropdown-toggle" href="reservations_all.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Reservations
                   </a>
@@ -53,14 +53,12 @@
           </nav>
 
         <div class="container">
-          (This will be a JS calendar...)
+          (This will be a JS calendar so not much effort...)
           <table class="table">
             <thead>
               <tr>
                 <th scope="col">2022</th>
                 <th scope="col">September</th>
-                <th scope="col"></th>
-                <th scope="col"></th>
               </tr>
             </thead>
             <tbody>
@@ -68,10 +66,11 @@
                 <th scope="row">1</th>
                 <td>
                   <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="resources/beaches/greece_beach2.jpg" alt="greek beach">
+                    <img class="card-img-top" src="resources/profile_pics/zuckerberg.jpg" alt="profile_pic">
                     <div class="card-body">
-                      <h5 class="card-title">Erik Fazakas</h5>
-                      <p class="card-text">erik.fazakas@kuka.com</p>
+                      <h5 class="card-title">Mark Zuckerberg</h5>
+                      <p class="card-text">mark.zuckerberg@facebook.com</p>
+                      <p class="card-text">202-555-0166</p>
                       <a href="#" class="btn btn-primary">Contact</a>
                     </div>
                   </div>
@@ -79,11 +78,83 @@
               </tr>
               <tr>
                 <th scope="row">2</th>
-                <td>Jacob</td>
+                <td>
+                  <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="resources/profile_pics/zuckerberg.jpg" alt="profile_pic">
+                    <div class="card-body">
+                      <h5 class="card-title">Mark Zuckerberg</h5>
+                      <p class="card-text">mark.zuckerberg@facebook.com</p>
+                      <p class="card-text">202-555-0166</p>
+                      <a href="#" class="btn btn-primary">Contact</a>
+                    </div>
+                  </div>
+                </td>
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td>Larry</td>
+                <td>
+                  <div class="card-deck">
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="resources/profile_pics/zuckerberg.jpg" alt="profile_pic">
+                      <div class="card-body">
+                        <h5 class="card-title">Mark Zuckerberg</h5>
+                        <p class="card-text">mark.zuckerberg@facebook.com</p>
+                        <p class="card-text">202-555-0166</p>
+                        <a href="#" class="btn btn-primary">Contact</a>
+                      </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="resources/profile_pics/the_rock.webp" alt="profile_pic">
+                      <div class="card-body">
+                        <h5 class="card-title">The Rock</h5>
+                        <p class="card-text">the.rock@wwe.com</p>
+                        <p class="card-text">+1-202-555-0166</p>
+                        <a href="#" class="btn btn-primary">Contact</a>
+                      </div>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td>
+                  <div class="card-deck">
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="resources/profile_pics/zuckerberg.jpg" alt="profile_pic">
+                      <div class="card-body">
+                        <h5 class="card-title">Mark Zuckerberg</h5>
+                        <p class="card-text">mark.zuckerberg@facebook.com</p>
+                        <p class="card-text">202-555-0166</p>
+                        <a href="#" class="btn btn-primary">Contact</a>
+                      </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="resources/profile_pics/the_rock.webp" alt="profile_pic">
+                      <div class="card-body">
+                        <h5 class="card-title">The Rock</h5>
+                        <p class="card-text">the.rock@wwe.com</p>
+                        <p class="card-text">+1-202-555-0166</p>
+                        <a href="#" class="btn btn-primary">Contact</a>
+                      </div>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td>
+                  <div class="card-deck">
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="resources/profile_pics/the_rock.webp" alt="profile_pic">
+                      <div class="card-body">
+                        <h5 class="card-title">The Rock</h5>
+                        <p class="card-text">the.rock@wwe.com</p>
+                        <p class="card-text">+1-202-555-0166</p>
+                        <a href="#" class="btn btn-primary">Contact</a>
+                      </div>
+                    </div>
+                  </div>
+                </td>
               </tr>
             </tbody>
           </table>
