--- a/static/profile.html
+++ b/static/profile.html
@@ -37,11 +37,11 @@
                     <a class="dropdown-item" href="reservations_all.html">All</a>
                     <a class="dropdown-item" href="reservations_own.html">Own</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="reservations_new">New</a>
+                    <a class="dropdown-item" href="reservations_new.html">New</a>
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="administration.html">Administration</a>
+                  <a class="nav-link" href="administration.html">Administration</a>
                 </li>
               </ul>
               <a class="btn btn-secondary" href="index.html">Sign Out</a>
