--- a/static/news.html
+++ b/static/news.html
@@ -49,12 +49,13 @@
           </nav>
 
         <div class="container">
+          <h1>News</h1>
           <div class="article">
-            <h1>First Article</h1>
+            <h2>First Article</h2>
             This is an example article which will be better looking and organized.
           </div>
           <div class="article">
-            <h1>Second Article</h1>
+            <h2>Second Article</h2>
             This is another example article which will be better looking and organized.
           </div>
         </div>
