--- a/static/reservations_all.html
+++ b/static/reservations_all.html
@@ -53,6 +53,7 @@
           </nav>
 
         <div class="container">
+          <h1>All Reservations</h1>
           (This will be a JS calendar so not much effort...)
           <table class="table">
             <thead>
