--- a/static/administration.html
+++ b/static/administration.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-        <title>Profile</title>
+        <title>Administration</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -115,7 +115,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td><a class="btn btn-success" href="#" role="button">New</a></td>
+                <td><a class="btn btn-success" href="administration_new_user.html" role="button">New</a></td>
               </tr>
             </tbody>
           </table>
