--- a/static/profile.html
+++ b/static/profile.html
@@ -51,6 +51,7 @@
         <div class="container">
 
           <form>
+            <h1>Profile</h1>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="firstName">First Name</label>
@@ -87,7 +88,7 @@
                 <input type="password" class="form-control" id="currentPassword" placeholder="Current password">
               </div>
             </div>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a class="btn btn-primary" href="profile.html" role="button">Save</a>
           </form>
 
         </div>
