--- a/static/reservations_new.html
+++ b/static/reservations_new.html
@@ -13,7 +13,7 @@
         <link href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.css' rel='stylesheet'>
         <link href='https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.css' rel='stylesheet'>
 
-        <title>All Reservations</title>
+        <title>New Reservations</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -55,6 +55,7 @@
         <div class="container">
           <form>
             <div class="form-group">
+              <h1>New Reservation</h1>
               <label for="startDate">Check-in Date</label>
               <input type="date" class="form-control" id="startDate" aria-describedby="startDate" value="2023-02-04" min="2022-09-27" max="2024-04-02">
               <label for="endDate">Check-out Date</label>
