--- a/static/reservations_own.html
+++ b/static/reservations_own.html
@@ -13,7 +13,7 @@
         <link href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.css' rel='stylesheet'>
         <link href='https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.css' rel='stylesheet'>
 
-        <title>All Reservations</title>
+        <title>Own Reservations</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -53,6 +53,7 @@
           </nav>
 
         <div class="container">
+          <h1>Own Reservations</h1>
           (This will be a JS calendar so not much effort...)
           <table class="table">
             <thead>
